syntax = "proto3";

package databroker;
option go_package = "github.com/pomerium/pomerium/pkg/grpc/databroker";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";


message Record {
  uint64 version = 1;
  string type = 2;
  string id = 3;
  google.protobuf.Any data = 4;
  google.protobuf.Timestamp modified_at = 5;
  google.protobuf.Timestamp deleted_at = 6;
}

message GetRequest {
  string type = 1;
  string id = 2;
}
message GetResponse {
  Record record = 1;
}

message QueryRequest {
  string type = 1;
  string query = 2;
  int64 offset = 3;
  int64 limit = 4;
}
message QueryResponse {
  repeated Record records = 1;
  int64 total_count = 2;
}

message PutRequest {
  Record record = 1;
}
message PutResponse {
  uint64 server_version = 1;
  Record record = 2;
}

message SyncRequest {
  uint64 server_version = 1;
  uint64 record_version = 2;
}
message SyncResponse {
  uint64 server_version = 1;
  Record record = 2;
}

message SyncLatestRequest {
  string type = 1;
}
message SyncLatestResponse {
  uint64 server_version = 1;
  optional Record record = 2;
}

service DataBrokerService {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Put(PutRequest) returns (PutResponse);
  rpc Query(QueryRequest) returns (QueryResponse);
  rpc Sync(SyncRequest) returns (stream SyncResponse);
  rpc SyncLatest(SyncLatestRequest) returns (stream SyncLatestResponse);
}
